[BUG] Fix invisible invitations window making it impossible to click the button "behind" it (e.g. Maps for custom lobby)

--- a/Client/Window/angular/projects/main/src/app/app.component.scss
+++ b/Client/Window/angular/projects/main/src/app/app.component.scss
@@ -1,14 +1,3 @@
-app-invitation {
-    position: absolute;
-    right: 40px;
-    top: 50%;
-    width: 18%;
-    height: auto;
-    min-height: 5%;
-    transform: translateY(-50%);
-    z-index: 1000;
-}
-
 app-teamorders {
     position: absolute;
     right: 10px;
