--- a/Client/Window/angular/projects/main/src/app/components/utils/invitation/invitation.component.scss
+++ b/Client/Window/angular/projects/main/src/app/components/utils/invitation/invitation.component.scss
@@ -1,6 +1,12 @@
 #container {
-    width: 100%;
+    position: absolute;
+    right: 40px;
+    top: 50%;
+    width: 18%;
     height: auto;
+    min-height: 5%;
+    transform: translateY(-50%);
+    z-index: 1000;
 
     #messages-container {
         width: 100%;
